--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,9 @@ ipython_config.py
 # pyenv
 .python-version
 
+# Pycharm
+.idea
+
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
@@ -143,3 +146,11 @@ tests/assets/source_*/*
 secrets.env
 checkpoints/
 experiments/
+
+# useless files
+try.py
+.DS_Store
+
+# remove CI
+.github/workflows
+
