--- a/eval/local_yaml/arc_challenge.yaml
+++ b/eval/local_yaml/arc_challenge.yaml
@@ -27,10 +27,10 @@ fsdp_config:
 
 icl_tasks:
 -
-  label: agi_eval_sat_en
-  dataset_uri: local_data_llm_foundry/reading_comprehension/agi_eval_sat_en.jsonl # ADD YOUR OWN DATASET URI
+  label: arc_challenge
+  dataset_uri: local_data_llm_foundry/world_knowledge/arc_challenge.jsonl # ADD YOUR OWN DATASET URI
   num_fewshot: [0]
   icl_task_type: multiple_choice
 #  continuation_delimiter: 'continuation'
-#  continuation_delimiter: 'Answer: ' # this separates questions from answers
+  continuation_delimiter: 'Answer: ' # this separates questions from answers
 #  has_categories: true
