--- a/eval/local_yaml/gsm8k_prepended_8shot.yaml
+++ b/eval/local_yaml/gsm8k_prepended_8shot.yaml
@@ -27,10 +27,17 @@ fsdp_config:
 
 icl_tasks:
 -
-  label: agi_eval_sat_en
-  dataset_uri: local_data_llm_foundry/reading_comprehension/agi_eval_sat_en.jsonl # ADD YOUR OWN DATASET URI
+  label: gsm8k
+  dataset_uri: local_data_llm_foundry/symbolic_problem_solving/gsm8k_prepended_8shot.jsonl # ADD YOUR OWN DATASET URI
   num_fewshot: [0]
-  icl_task_type: multiple_choice
+  icl_task_type: generation_task_with_answers
+  cot_delimiter: "The answer is "
+  continuation_delimiter: "\n\nA:"
+  question_prelimiter: ""
+  do_normalization: false
+  early_stopping_criteria:
+    - "\n\n"
+    - "Question:"
 #  continuation_delimiter: 'continuation'
 #  continuation_delimiter: 'Answer: ' # this separates questions from answers
 #  has_categories: true
