--- a/eval/local_yaml/triviaqa.yaml
+++ b/eval/local_yaml/triviaqa.yaml
@@ -27,10 +27,10 @@ fsdp_config:
 
 icl_tasks:
 -
-  label: agi_eval_sat_en
-  dataset_uri: local_data_llm_foundry/reading_comprehension/agi_eval_sat_en.jsonl # ADD YOUR OWN DATASET URI
+  label: triviaqa
+  dataset_uri: local_data_llm_foundry/world_knowledge/triviaqa.jsonl # ADD YOUR OWN DATASET URI
   num_fewshot: [0]
-  icl_task_type: multiple_choice
+  icl_task_type: generation_task_with_answers
 #  continuation_delimiter: 'continuation'
 #  continuation_delimiter: 'Answer: ' # this separates questions from answers
 #  has_categories: true
