--- a/eval/local_yaml/bigbench_movie_recommendation.yaml
+++ b/eval/local_yaml/bigbench_movie_recommendation.yaml
@@ -27,7 +27,7 @@ fsdp_config:
 
 icl_tasks:
 -
-  label: mmlu
+  label: bigbench_movie_recommendation
   dataset_uri: local_data_llm_foundry/world_knowledge/bigbench_movie_recommendation.yaml # ADD YOUR OWN DATASET URI
   num_fewshot: [0]
   icl_task_type: multiple_choice
